fix(GradleForge): use `stable_20` mm